name:                flann-hs
version:             0.0.0.0
synopsis:            preliminary binding to "a fast library for approximate nearest neighbours" (FLANN)
description:         <http://people.cs.ubc.ca/~mariusm/index.php/FLANN/FLANN>
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt <vogt.adam@gmail.com>
maintainer:          Adam Vogt <vogt.adam@gmail.com>
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Flann
  other-modules:       C2HS

  hs-source-dirs:      src
  include-dirs:        cbits
  c-sources:           cbits/flann_adapter.c
  build-depends:       base ==4.6.*, vector ==0.10.*, repa ==3.2.*
  build-tools:         c2hs

  pkgconfig-depends:   flann
